<resources>
    <string name="open" />
    <string name="close" />
    <string name="app_name">Ethical Lens</string>
    <string name="dark_pattern_detection">Dark\nPattern\nDetection</string>
    <string name="email">Email</string>
    <string name="login_to_continue">Login to Continue…</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don`t have an account?</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="register_to_start_a_new_journey">Register to Start a new Journey..</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="upload">Upload</string>
    <string name="version_1_0">Version:1.0</string>
    <string name="select_photo_of_terms_conditions_privacy_policy"><![CDATA[Select Photo of Terms &\nConditions or Privacy Policy]]></string>
    <string name="get_result">Get Result</string>
    <string name="todo">TODO</string>
    <string name="don_t_worry_we_will">Don`t Worry, We Will Send a Reset Password Link To Your Email Address, Open That Link To Change Your Password!</string>
    <string name="forgot_password7">Forgot Password?</string>
    <string name="reset_password">Reset Password</string>
    <string name="note_enter_your_registered_email_address_only">Note: Enter Your Registered Email Address Only!</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="write_a_message">Write a message...</string>
    <string name="post">Post</string>
    <string name="message">Message....</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="data_structures">Data Structures</string>
    <string name="dislike">Dislike</string>
    <string name="comment">Comment</string>
    <string name="result">Result</string>
    <string name="confirm_dark_patterns">Upload Image to\nConfirm Dark Patterns</string>
    <string name="know_how_much_secure_nthe_terms_conditions"><![CDATA[Know how much secure\nthe Terms & conditions]]></string>
    <string name="or">OR</string>
    <string name="upload_image">Upload Image</string>
    <string name="upload_text">Upload Text</string>
    <string name="enter_the_text_of_terms_nconditions_get_how_secure_it_is"><![CDATA[Enter the text of Terms & Conditions\n& get percentage how secure it is.]]></string>
    <string name="register_complaint">Register Complaint</string>
    <string name="write_a_complaint"><![CDATA[My uploaded terms & conditions are below limit of 90%. They not secure for my uses. kindly request to investigate this matter and take appropriate action to ensure the protection of consumers. If you require any additional information,documentation or clarification then contact me. I look forward to a prompt resolution.]]></string>
    <string name="upload_url_of_suspected_site">Upload url of suspected site</string>
    <string name="give_brief_idea_about_your_complaint_experience_on_site">Give brief idea about your complaint/experience on site</string>
    <string name="empowering_your_digital_safety_with_ethical_lens">Empowering Your Digital Safety with “ ETHICAL LENS ”</string>
    <string name="whythisapp"><![CDATA[Dear Users,\n\nWe are excited to share with you the innovative & useful application in digital security Ethical Lens. As the developers behind this groundbreaking app, we want to express our gratitude for joining us on this journey to create a safer and more transparent online environment If any victim complaint against this companies in consumer court then, most of the time companies are Winner or escape in front of judges of courts.\n\nEthical Lens is not just an app; it\'s your guardian against dark patterns, deceptive design practices & also for terms and conditions of sites. We\'re committed to empowering you with the tools and knowledge needed to navigate the digital landscape securely.\n\nWe also Introducing the Security Percentage feature, offering you a real-time, transparent measure of the security level of websites and apps according to companies terms and conditions. We set limit of 90 percentage, but if some companies score below 90 % then directly open register complaint section.we reduce your complaint timing.\n\nYour voice matters. Ethical Lens allows you to register complaints against insecure apps directly. One more main feature tracking complaint, they provides real time complaint status, we can hold developers accountable for creating safer digital spaces\n\nConnect with like-minded users in our Community Chat feature. Share insights, experiences, and tips on identifying and avoiding dark patterns. This community is your digital support system, and your active participation makes it stronger.\n\nThank you for choosing Ethical Lens. Together, let\'s create a digital landscape where security, transparency, and community collaboration reign supreme.\n\nStay Secure,\n\n(Team Ethical Lens)\n(bt21ce024@nitmz.ac.in]]></string>
    <string name="link_your_account_with">Link Your account with</string>
</resources>