<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    android:layout_gravity="center"
    android:gravity="center"
    android:background="@color/white"
    android:theme="@style/AppTheme"
    tools:context=".ForgotPassword">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/logo_image"
                android:layout_width="200dp"
                android:layout_marginTop="30dp"
                android:layout_gravity="center_horizontal"
                android:layout_height="200dp"
                android:src="@drawable/dpd_logo_ic"
                android:contentDescription="@string/todo" />

            <TextView
                android:id="@+id/logo_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/bungee"
                android:gravity="center"
                android:text="@string/forgot_password"
                android:textColor="@color/darkBlue"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/fg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/don_t_worry_we_will"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_margin="10dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_height="wrap_content">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/email"
                        android:hint="@string/email"
                        android:layout_width="match_parent"
                        android:inputType="textEmailAddress"
                        android:layout_height="wrap_content"/>
                </com.google.android.material.textfield.TextInputLayout>


                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/resetbtn"
                    android:layout_width="250dp"
                    android:layout_height="58dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="50dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/getstartedbtn"
                    android:text="@string/reset_password"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"/>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_marginTop="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <TextView
                        android:text="@string/don_t_have_an_account"
                        android:layout_gravity="center"
                        android:gravity="end|center"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"/>


                    <TextView
                        android:id="@+id/RegisterNow"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_gravity="center"
                        android:layout_margin="5dp"
                        android:background="#00000000"
                        android:fontFamily="@font/antic"
                        android:gravity="center|start"
                        android:text="@string/register"
                        android:textColor="@color/darkBlue"
                        android:textStyle="bold"
                        tools:ignore="TextSizeCheck" />



                </LinearLayout>


                <ProgressBar
                    android:id="@+id/progressBar"
                    android:layout_width="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_gravity="center"
                    android:visibility="gone"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:text="@string/note_enter_your_registered_email_address_only"
                    android:textColor="#DD2C00" />


            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</RelativeLayout>
