<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:theme="@style/AppTheme"
    android:layout_height="match_parent"
    tools:context=".Fragments.ComplaintFragment">

        <LinearLayout
            android:id="@+id/edittex1"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="25dp"
                android:text="@string/register_complaint"
                android:textSize="25sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteY="10dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edittex2"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:layout_editor_absoluteX="20dp"
                tools:layout_editor_absoluteY="57dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/complaintBox1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/convergence"
                    android:gravity="start|top"
                    android:inputType="textMultiLine"
                    android:lines="10"
                    android:scrollbars="vertical"
                    android:text="@string/write_a_complaint" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edittex3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintEnabled="false"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="10dp"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="20dp"
                tools:layout_editor_absoluteY="303dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/complaintBox2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/convergence"
                    android:gravity="start|top"
                    android:hint="@string/upload_url_of_suspected_site" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edittex4"
                android:layout_width="match_parent"
                android:layout_marginTop="20dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                app:hintEnabled="false"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="20dp"
                tools:layout_editor_absoluteY="376dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/complaintBox3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/convergence"
                    android:gravity="start|top"
                    android:hint="@string/give_brief_idea_about_your_complaint_experience_on_site"
                    android:inputType="textMultiLine"
                    android:lines="2" />

            </com.google.android.material.textfield.TextInputLayout>


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/ComplaintBtn"
                android:layout_marginTop="50dp"
                android:layout_width="250dp"
                android:layout_height="58dp"
                android:layout_gravity="center"
                android:background="@drawable/getstartedbtn"
                android:text="@string/register_complaint"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="71dp"
                tools:layout_editor_absoluteY="499dp" />

        </LinearLayout>

</FrameLayout>